# OpenCastor

./: .coverage  .dockerignore  .env.example  .gitignore  .opencastor-commitments.jsonl  .opencastor-crash.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING-RECIPES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.arm  LICENSE  Makefile  OpenCastor_Light_Mode_Midnight_Theme.html  README.md  SECURITY.md  constraints.txt  demo_logs.py  docker-compose.arm.yml  docker-compose.yml  pyproject.toml  requirements.txt  wrangler.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.streamlit/: config.toml
brand/: USAGE.md  VARIANTS.md  process_logo.py
castor/: __init__.py  __main__.py  action_validator.py  agent_tools.py  api.py  api_errors.py  apikeys.py  approvals.py  attestation_generator.py  audit.py  auth.py  auth_jwt.py  authority.py  avoidance.py  backup.py  battery.py  behaviors.py  benchmark.py  benchmarker.py  calibrate.py  camera.py  claude_proxy.py  cli.py  client.py  command_interpreter.py  compliance.py  confidence_gate.py  config_history.py  config_validation.py  configure.py  conformance.py  connectivity.py  context.py  crash.py  daemon.py  dashboard.py  dashboard_memory_timeline.py  dashboard_tui.py  demo.py  depth.py  (+100 more)
community-recipes/: README.md  index.json
config/: arm.rcan.yaml  hub_index.json  opencastor-attestation.service  rcan.schema.json  swarm.yaml
demo/: package-lock.json  package.json
docker/: arm-entrypoint.sh
docs/: agents.md  community-recipes.md  hardware-guide.md  learner.md  peripherals.md  recipes-cli.md  robot-md-claude-code.md  safety-architecture.md  safety-audit-report.md  swarm.md  two-tier-autoresearch.md
examples/: bob-reference.rcan.yaml
scripts/: autodream.sh  gamepad_driver.py  generate_icons.py  generate_svgs.py  install-check.ps1  install-check.sh  install.ps1  install.sh  setup_bigquery.sh  start_dashboard.sh  sync-version.py  sync_setup_docs.py  uninstall.sh
site/: _headers  _redirects  about.html  beginners.html  changelog.html  docs.html  hardware.html  hub.html  index.html  replace_logos.py  styles.css  tutorials.html  update_nav.py
tasks/: prd-dashboard-ux-overhaul.md
tests/: test_acb_driver.py  test_agent_scope_propagation.py  test_agent_tools.py  test_anti_subversion.py  test_api_endpoints.py  test_apple_preflight.py  test_apple_provider.py  test_approvals.py  test_attestation.py  test_audit.py  test_audit_tamper.py  test_auth.py  test_auth_jwt.py  test_autodream.py  test_battery_history.py  test_behavior_event_trigger.py  test_behavior_log_step.py  test_behavior_parallel_race.py  test_behavior_schedule.py  test_behavior_wait_for_event.py  test_behaviors.py  test_benchmark.py  test_benchmarker.py  test_bracket_season.py  test_brain_compaction.py  test_bridge.py  test_camera_model.py  test_castor_credits.py  test_channel_scope.py  test_channels.py  test_cli.py  test_cli_compete.py  test_cli_register_dry_run.py  test_cli_research.py  test_cli_v3_dispatch.py  (+196 more)
(+365 files in other folders)
